--- a/modules/ProvBase/Install/config.cfg
+++ b/modules/ProvBase/Install/config.cfg
@@ -8,7 +8,7 @@ destination	= "/var/www/nmsprime/modules/ProvBase"
 
 license		= "GPLv3"
 
-depends		= "dhcp;bind;bind-utils;tftp;tftp-server;xinetd;net-snmp;net-snmp-devel;rh-php71-php-snmp;rh-php71-php-pgsql;postgresql;flex;flex-devel;bzip2;bison;bind;docsis;vim-common;nmsprime-base"
+depends		= "dhcp;bind;bind-utils;tftp;tftp-server;xinetd;net-snmp;net-snmp-devel;rh-php71-php-snmp;rh-php71-php-pgsql;postgresql;flex;flex-devel;bzip2;bison;bind;docsis;vim-common;nmsprime-base;freeradius;freeradius-mysql"
 
 options		= ""
 
@@ -44,3 +44,4 @@ nmsprime.xml		= /usr/lib/firewalld/zones/nmsprime.xml
 tftpd-cm.log		= /var/log/nmsprime/tftpd-cm.log
 tftpd-cm.conf		= /etc/rsyslog.d/tftpd-cm.conf
 nmsprime-provbase.conf	= /etc/logrotate.d/nmsprime-provbase
+provbase.env		= /etc/nmsprime/env/provbase.env
