run mysql_secure_installation and set root password during installation
* note down the root password for later migrations (e.g. adding a DB)
* the mysql root credentials will only be read-/writeable by root
* harmonize setting env file permissions
* cleanup

--- a/Install/config.cfg
+++ b/Install/config.cfg
@@ -22,6 +22,7 @@ cron-nmsprime			= /etc/cron.d/nmsprime
 cron-reload-httpd		= /etc/cron.d/reload-httpd
 cron-backup-nmsprime	= /etc/cron.d/backup-nmsprime
 global.env				= /etc/nmsprime/env/global.env
+root.env				= /etc/nmsprime/env/root.env
 nmsprime.log			= /etc/logrotate.d/nmsprime
 ignore-systemd-session-slice.conf = /etc/rsyslog.d/ignore-systemd-session-slice.conf
 php71.sh				= /etc/profile.d/php71.sh
