Rename module Dunning to OverdueDebts: Replace in files

--- a/modules/Dunning/Install/config.cfg
+++ b/modules/Dunning/Install/config.cfg
@@ -1,10 +1,10 @@
 [config]
 
-name        = "nmsprime-dunning"
+name        = "nmsprime-overduedebts"
 
-description = "NMS Prime Dunning Package"
+description = "NMS Prime OverdueDebts Package"
 
-destination = "/var/www/nmsprime/modules/Dunning"
+destination = "/var/www/nmsprime/modules/OverdueDebts"
 
 license     = "GPLv3"
 
