add ACS dhcpd option space

--- a/modules/ProvBase/Install/files/dhcpd.conf
+++ b/modules/ProvBase/Install/files/dhcpd.conf
@@ -32,6 +32,11 @@ option ccc.provision-server code 3 = {unsigned integer 8, string};
 option ccc.realm code 6 = string;
 option ccc-encapsulation code 122 = encapsulate ccc;
 
+# TR-069
+option dhcp-parameter-request-list = concat(option dhcp-parameter-request-list,2b);
+option space ACS;
+option ACS.acs_URL code 1 = text;
+option ACS.acs_PROVCODE code 2 = text;
 
 include "/etc/dhcp-nmsprime/global.conf";
 
