allow specifying the package version of dependencies

--- a/modules/HfcBase/Install/config.cfg
+++ b/modules/HfcBase/Install/config.cfg
@@ -8,7 +8,7 @@ destination	= "/var/www/nmsprime/modules/HfcBase"
 
 license		= "GPLv3"
 
-depends		= "graphviz rh-php71-php-gd rh-php71-php-ldap rh-php71-php-pear net-snmp-utils net-snmp net-snmp-devel rh-php71-php-snmp nmsprime-base nmsprime-hfcreq"
+depends		= "graphviz;rh-php71-php-gd;rh-php71-php-ldap;rh-php71-php-pear;net-snmp-utils;net-snmp;net-snmp-devel;rh-php71-php-snmp;nmsprime-base;nmsprime-hfcreq"
 
 options		= ""
 
