--- a/modules/HfcReq/Install/config.cfg
+++ b/modules/HfcReq/Install/config.cfg
@@ -8,7 +8,7 @@ destination	= "/var/www/nmsprime/modules/HfcReq"
 
 license		= "GPLv3"
 
-depends		= "nmsprime-base icingaweb2-module-director-nmsprime"
+depends		= "nmsprime-base;icingaweb2-module-director = 1.4.2-5"
 
 options		= ""
 
