allow CPEs to connect to the ACS server

--- a/modules/ProvBase/Install/config.cfg
+++ b/modules/ProvBase/Install/config.cfg
@@ -40,6 +40,7 @@ named-ddns.sh		= /etc/named-ddns.sh
 nmsprime.test.zone	= /var/named/dynamic/nmsprime.test.zone
 in-addr.arpa.zone	= /var/named/dynamic/in-addr.arpa.zone
 cm.xml				= /usr/lib/firewalld/zones/cm.xml
+cpe.xml				= /usr/lib/firewalld/zones/cpe.xml
 nmsprime.xml		= /usr/lib/firewalld/zones/nmsprime.xml
 tftpd-cm.log		= /var/log/nmsprime/tftpd-cm.log
 tftpd-cm.conf		= /etc/rsyslog.d/tftpd-cm.conf
