allow DNS for cpe and nmsprime zone

--- a/modules/ProvBase/Install/files/named-nmsprime.conf
+++ b/modules/ProvBase/Install/files/named-nmsprime.conf
@@ -25,6 +25,10 @@ acl mta {
 	100.96.0.0/11;
 };
 
+acl nmsprime {
+	172.20.0.0/22;
+};
+
 //
 // NOTE:
 //  local: allow update and recursion
@@ -42,7 +46,7 @@ options {
 	dump-file		"/var/named/data/cache_dump.db";
 	statistics-file		"/var/named/data/named_stats.txt";
 	memstatistics-file	"/var/named/data/named_mem_stats.txt";
-	allow-query		{ local; cm; cpe; mta; }; // we need query to resolve modem, mta name !
+	allow-query		{ local; cm; cpe; mta; nmsprime; }; // we need query to resolve modem, mta name !
 
 	forwarders		{ 8.8.8.8; 8.8.4.4; };
 
@@ -58,7 +62,7 @@ options {
 	*/
 
 	recursion yes;
-	allow-recursion		{ local; cm; cpe; mta; }; // we need local to resolve modem, mta names !
+	allow-recursion		{ local; cm; cpe; mta; nmsprime; }; // we need local to resolve modem, mta names !
 
 	empty-zones-enable no;
 
