ignore periodic monitoring messages

--- a/modules/ProvBase/Install/config.cfg
+++ b/modules/ProvBase/Install/config.cfg
@@ -47,3 +47,4 @@ tftpd-cm.conf		= /etc/rsyslog.d/tftpd-cm.conf
 nmsprime-provbase.conf	= /etc/logrotate.d/nmsprime-provbase
 provbase.env		= /etc/nmsprime/env/provbase.env
 cron-restart-cwmp	= /etc/cron.d/restart-cwmp
+ignore-genieacs-cwmp.conf	= /etc/rsyslog.d/ignore-genieacs-cwmp.conf
