--- a/modules/OverdueDebts/Install/config.cfg
+++ b/modules/OverdueDebts/Install/config.cfg
@@ -8,7 +8,7 @@ destination = "/var/www/nmsprime/modules/OverdueDebts"
 
 license     = "GPLv3"
 
-depends     = "nmsprime-billing"
+depends     = "nmsprime-billingbase"
 
 options     = ""
 
