remove cacti version dependency

--- a/modules/ProvMon/Install/config.cfg
+++ b/modules/ProvMon/Install/config.cfg
@@ -8,7 +8,7 @@ destination	= "/var/www/nmsprime/modules/ProvMon"
 
 license		= "GPLv3"
 
-depends		= "cacti = 1.2.3-1.el7;nmsprime-provbase;rh-php71-php-gmp;modempoller-nmsprime"
+depends		= "cacti;nmsprime-provbase;rh-php71-php-gmp;modempoller-nmsprime"
 
 options		= ""
 
