add mariadb dependency, otherwise freeradius will fail during boot

--- a/modules/ProvBase/Install/config.cfg
+++ b/modules/ProvBase/Install/config.cfg
@@ -27,6 +27,7 @@ default-network.conf	= /etc/dhcp-nmsprime/default-network.conf
 named-nmsprime.conf	= /etc/named-nmsprime.conf
 tftp				= /etc/xinetd.d/tftp-nmsprime
 time-dgram-nmsprime	= /etc/xinetd.d/time-dgram-nmsprime
+depend-mariadb.conf		= /usr/lib/systemd/system/radiusd.service.d/depend-mariadb.conf
 path-named.conf		= /usr/lib/systemd/system/named.service.d/path-named.conf
 path-dhcpd.conf		= /usr/lib/systemd/system/dhcpd.service.d/path-dhcpd.conf
 sudoers				= /etc/sudoers.d/nmsprime-provbase
