Add DHCP conf files during installation to prevent failures when changing installation process e.g. removing call of nms:dhcp command

--- a/modules/ProvBase/Install/config.cfg
+++ b/modules/ProvBase/Install/config.cfg
@@ -21,9 +21,13 @@ configfiles	= "module.json"
 
 cmts_gws.conf		= /etc/dhcp-nmsprime/cmts_gws.conf
 dhcpd.conf			= /etc/dhcp-nmsprime/dhcpd.conf
+enpoints-host.conf	= /etc/dhcp-nmsprime/endpoints-host.conf
+global.conf			= /etc/dhcp-nmsprime/global.conf
 log.conf			= /etc/dhcp-nmsprime/log.conf
 ignore-cpe.conf		= /etc/dhcp-nmsprime/ignore-cpe.conf
-default-network.conf	= /etc/dhcp-nmsprime/default-network.conf
+default-network.conf = /etc/dhcp-nmsprime/default-network.conf
+modems-clients-public.conf = /etc/dhcp-nmsprime/modems-clients-public.conf
+modems-host.conf	= /etc/dhcp-nmsprime/modems-host.conf
 named-nmsprime.conf	= /etc/named-nmsprime.conf
 tftp				= /etc/xinetd.d/tftp-nmsprime
 time-dgram-nmsprime	= /etc/xinetd.d/time-dgram-nmsprime
