--- a/modules/ProvBase/Install/files/global.conf
+++ b/modules/ProvBase/Install/files/global.conf
@@ -31,7 +31,7 @@ class "CM" {
 
 class "MTA" {
         match if (substring(option vendor-class-identifier,0,4) = "pktc");
-        option ccc.provision-server 0 "\006ninovm\005nms10\006erznet\002tv\000"; # number of letters before every through dot seperated word
+        option ccc.provision-server 0 "\007nmslx01\010nmsprime\004test\000"; # number of letters before every through dot seperated word
         option ccc.realm 05:42:41:53:49:43:01:31:00;  # BASIC.1
         ddns-updates on;
 }
