--- a/modules/ProvBase/Install/config.cfg
+++ b/modules/ProvBase/Install/config.cfg
@@ -21,7 +21,7 @@ configfiles	= "module.json"
 
 cmts_gws.conf		= /etc/dhcp-nmsprime/cmts_gws.conf
 dhcpd.conf			= /etc/dhcp-nmsprime/dhcpd.conf
-enpoints-host.conf	= /etc/dhcp-nmsprime/endpoints-host.conf
+endpoints-host.conf	= /etc/dhcp-nmsprime/endpoints-host.conf
 global.conf			= /etc/dhcp-nmsprime/global.conf
 log.conf			= /etc/dhcp-nmsprime/log.conf
 ignore-cpe.conf		= /etc/dhcp-nmsprime/ignore-cpe.conf
