Fix nasty dhcpd lease file corruption bug
For CPEs behind a CM we spawn a new class based on the agent.remote-id.
If all bytes of said id are ascii printable, they won't be stored in hex
form in the lease file. Generally this is not an issue, except for
matching leases on the CPE analysis page.

However, if the remote-id is ascii printable and contains one or more
backslashes, dhcpd won't be able to parse the lease file properly, which
leads to corruption and lost leases.

Consider CPE (5c:49:79:36:43:58) behind CM (5c:49:79:36:43:5c). In the
corresponding lease file the interesting lines are:

billing subclass "Client" "\Iy6C\";
hardware ethernet 5c:49:79:36:43:58;
option agent.remote-id "\\Iy6C\\";

The subclass generated via "spawn with option agent.remote-id" is not
properly escaped, whereas "option agent.remote-id" is. Thus, on dhcpd
restart data/lease loss will occur.

To workaround, we will not use option agent.remote-id itself, but its
binary-to-ascii converted representation including semicolons. Thus, the
lease file will look as follows:

billing subclass "Client" "5c:49:79:36:43:5c";
hardware ethernet 5c:49:79:36:43:58;
option agent.remote-id "\\Iy6C\\";

Furthermore, from now on we use cm_mac instead of billing subclass to
match the CPE lease, since billing subclass strips leading zeros, e.g.

billing subclass "Client" "5c:9:79:36:43:5c";

vs.

set cm_mac = "5c:09:79:36:43:5c";

--- a/modules/ProvBase/Install/files/global.conf
+++ b/modules/ProvBase/Install/files/global.conf
@@ -38,7 +38,7 @@ class "MTA" {
 
 class "Client" {
 	match if ((substring(option vendor-class-identifier,0,6) != "docsis") and (substring(option vendor-class-identifier,0,4) != "pktc"));
-	spawn with option agent.remote-id; # create a sub-class automatically
+	spawn with binary-to-ascii(16, 8, ":", substring(option agent.remote-id, 0, 6)); # create a sub-class automatically
 	lease limit 4; # max 4 private cpe per cm
 }
 
