--- a/modules/ProvBase/Install/files/tftpd-cm.conf
+++ b/modules/ProvBase/Install/files/tftpd-cm.conf
@@ -2,4 +2,4 @@
 $template tftpTemplate,"%timegenerated:::date-unixtimestamp%%msg:::sp-if-no-1st-sp%%msg:::drop-last-lf%\n"
 
 # only log real cable modem configfile downloads
-if $programname == "in.tftpd" and $msg contains 'finished cm/cm-' then /var/log/nmsprime/tftpd-cm.log;tftpTemplate
+if $msg contains 'finished cm/cm-' then /var/log/nmsprime/tftpd-cm.log;tftpTemplate
