--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "public/components/assets-admin/plugins/vue"]
 	path = public/components/assets-admin/plugins/vue
 	url = https://github.com/vuejs/vue
+	ignore = all
 [submodule "public/components/assets-admin/plugins/sortable"]
 	path = public/components/assets-admin/plugins/sortable
 	url = https://github.com/SortableJS/Sortable
+	ignore = all
 [submodule "public/components/assets-admin/plugins/vuedraggable"]
 	path = public/components/assets-admin/plugins/vuedraggable
 	url = https://github.com/SortableJS/Vue.Draggable
+	ignore = all
