add missing rh-php71-php-fpm dependency

--- a/Install/config.cfg
+++ b/Install/config.cfg
@@ -8,7 +8,7 @@ destination	= "/var/www/nmsprime"
 
 license		= "GPLv3"
 
-depends		= "mariadb;mariadb-server;httpd;rh-php71;rh-php71-php-cli;rh-php71-php-mysqlnd;rh-php71-php-mbstring;rh-php71-php-pdo;mod_ssl;wget;chrony;pwgen;rsync;awscli;php-common"
+depends		= "mariadb;mariadb-server;httpd;rh-php71;rh-php71-php-cli;rh-php71-php-mysqlnd;rh-php71-php-mbstring;rh-php71-php-pdo;rh-php71-php-fpm;mod_ssl;wget;chrony;pwgen;rsync;awscli;php-common"
 
 options		= ""
 
