IPv6: Install and activate ISC kea DHCP for basic IPv6 allocation with mysql

--- a/modules/ProvBase/Install/config.cfg
+++ b/modules/ProvBase/Install/config.cfg
@@ -8,7 +8,7 @@ destination = "/var/www/nmsprime/modules/ProvBase"
 
 license     = "GPLv3"
 
-depends     = "dhcp;bind;bind-utils;tftp;tftp-server;xinetd;net-snmp;net-snmp-devel;rh-php71-php-snmp;rh-php71-php-pgsql;postgresql;flex;flex-devel;bzip2;bison;bind;docsis;vim-common;nmsprime-base;freeradius;freeradius-mysql;genieacs;expect"
+depends     = "dhcp;bind;bind-utils;tftp;tftp-server;xinetd;net-snmp;net-snmp-devel;rh-php71-php-snmp;rh-php71-php-pgsql;postgresql;flex;flex-devel;bzip2;bison;bind;docsis;vim-common;nmsprime-base;freeradius;freeradius-mysql;genieacs;expect;kea"
 
 options     = ""
 
@@ -52,3 +52,7 @@ nmsprime-provbase.conf = /etc/logrotate.d/nmsprime-provbase
 provbase.env        = /etc/nmsprime/env/provbase.env
 cron-restart-cwmp   = /etc/cron.d/restart-cwmp
 ignore-genieacs-cwmp.conf = /etc/rsyslog.d/ignore-genieacs-cwmp.conf
+dhcp6-nmsprime.conf = /etc/kea/dhcp6-nmsprime.conf
+gateways6.conf      = /etc/kea/gateways6.conf
+global6.conf        = /etc/kea/global6.conf
+hosts6.conf         = /etc/kea/hosts6.conf
