IPv6: Propery name gateways include file and directory with version 6

--- a/modules/ProvBase/Install/files/dhcp6-nmsprime.conf
+++ b/modules/ProvBase/Install/files/dhcp6-nmsprime.conf
@@ -22,7 +22,7 @@
     <?include "/etc/kea/global6.conf"?>,
 
     "shared-networks": [
-        <?include "/etc/kea/gateways.conf"?>
+        <?include "/etc/kea/gateways6.conf"?>
     ],
 
     "loggers": [{
