--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,11 @@
   "license": "MIT",
   "type": "project",
   "require": {
-    "laravel/framework": "5.5.*",
+    "laravel/framework": "5.6.*",
     "soapbox/laravel-formatter": "2.x",
-    "laravelcollective/html": "5.5.*",
-    "intervention/validation": "~1.1.3",
-    "digitick/sepa-xml": "1.1.*",
-    "globalcitizen/php-iban": "2.6.*",
+    "laravelcollective/html": "5.6.*",
+    "digitick/sepa-xml": "1.*",
+    "globalcitizen/php-iban": "4.*",
     "box/spout": "^3.0",
     "chumper/zipper": "1.0.*",
     "yajra/laravel-datatables-oracle": "8.*",
@@ -19,17 +18,14 @@
     "doctrine/dbal": "^2.7",
     "silber/bouncer": "v1.0.0-rc.5",
     "kingsquare/php-mt940": "^1.5",
-    "fideloper/proxy": "~4.0"
+    "fideloper/proxy": "^4.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "~6.0",
-    "phpspec/phpspec": "~2.1",
-    "laracasts/generators": "^1.1",
-    "symfony/dom-crawler": "~3.0",
-    "symfony/css-selector": "~3.0",
+    "phpunit/phpunit": "~7.0",
+    "phpspec/phpspec": "~6.1",
     "laravel/tinker": "^1.0",
-    "fzaninotto/faker": "~1.5.0",
-    "facade/ignition": "^1.14"
+    "fzaninotto/faker": "~1.9.1",
+    "facade/ignition": "^1.4"
   },
   "autoload": {
     "classmap": [
