IPv6: Add DNS forward entries of Endpoints with fixed IP, prepare kea-dhcp-ddns updates

--- a/modules/ProvBase/Install/files/dhcp6-nmsprime.conf
+++ b/modules/ProvBase/Install/files/dhcp6-nmsprime.conf
@@ -25,6 +25,11 @@
         <?include "/etc/kea/gateways6.conf"?>
     ],
 
+    "dhcp-ddns": {
+        # DNS updates for hosts with static IP are currently done via NMSPrime Endpoints
+        "enable-updates": false
+    },
+
     "loggers": [{
         "name": "dhcp6",
         "output_options": [{
