--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "doctrine/dbal": "^2.7",
     "silber/bouncer": "v1.0.0-rc.9",
     "kingsquare/php-mt940": "^1.5",
-    "fideloper/proxy": "^4.4"
+    "fideloper/proxy": "^4.4",
+    "phpseclib/phpseclib": "~2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~9.0",
