IPv6: replace kea dhcp6 root config file path by separate conf file in systemd directory as it would be overwritten on kea update otherwise

--- a/modules/ProvBase/Install/config.cfg
+++ b/modules/ProvBase/Install/config.cfg
@@ -56,3 +56,4 @@ dhcp6-nmsprime.conf = /etc/kea/dhcp6-nmsprime.conf
 gateways6.conf      = /etc/kea/gateways6.conf
 global6.conf        = /etc/kea/global6.conf
 hosts6.conf         = /etc/kea/hosts6.conf
+path-kea-dhcp6.conf = /usr/lib/systemd/system/kea-dhcp6.service.d/path-kea-dhcp6.conf
