IPv6: Replace placeholder for DB credentials, fix typo

--- a/modules/ProvBase/Install/files/dhcp6-nmsprime.conf
+++ b/modules/ProvBase/Install/files/dhcp6-nmsprime.conf
@@ -7,8 +7,8 @@
     "lease-database": {
         "type": "mysql",
         "name": "kea",
-        "user": "<DB-USERNAME>",
-        "password": "<DB-PASSWORD>"
+        "user": "<DB_USERNAME>",
+        "password": "<DB_PASSWORD>"
     },
 
     "option-data": [
