IPv6: Change default DNS servers

--- a/modules/ProvBase/Install/files/dhcp6-nmsprime.conf
+++ b/modules/ProvBase/Install/files/dhcp6-nmsprime.conf
@@ -12,10 +12,10 @@
     },
 
     "option-data": [
-        # IPv6 enviatel and google DNS servers
         {
+            # DNS server: Google and Freifunk München
             "name": "dns-servers",
-            "data": "2a00:1ca0:1000:3::1:0, 2001:4860:4860::8888"
+            "data": "2001:4860:4860::8888, 2001:4860:4860::8844, 2a01:4f8:151:34aa::198"
         }
     ],
 
