--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "silber/bouncer": "v1.0.0-rc.9",
     "kingsquare/php-mt940": "^1.5",
     "fideloper/proxy": "^4.4",
-    "phpseclib/phpseclib": "~2.0"
+    "phpseclib/phpseclib": "~2.0",
+    "intervention/validation": "^2.6"
   },
   "require-dev": {
     "phpunit/phpunit": "~9.0",
