allow HTTP firmware downloads (TLS unsupported)

--- a/modules/ProvBase/Install/config.cfg
+++ b/modules/ProvBase/Install/config.cfg
@@ -57,3 +57,4 @@ gateways6.conf      = /etc/kea/gateways6.conf
 global6.conf        = /etc/kea/global6.conf
 hosts6.conf         = /etc/kea/hosts6.conf
 path-kea-dhcp6.conf = /usr/lib/systemd/system/kea-dhcp6.service.d/path-kea-dhcp6.conf
+nmsprime-firmware.conf = /etc/httpd/conf.d/nmsprime-firmware.conf
