--- a/modules/ProvBase/Install/config.cfg
+++ b/modules/ProvBase/Install/config.cfg
@@ -49,7 +49,7 @@ cpe.xml             = /usr/lib/firewalld/zones/cpe.xml
 nmsprime.xml        = /usr/lib/firewalld/zones/nmsprime.xml
 tftpd-cm.log        = /var/log/nmsprime/tftpd-cm.log
 tftpd-cm.conf       = /etc/rsyslog.d/tftpd-cm.conf
-nmsprime-provbase.conf = /etc/logrotate.d/nmsprime-provbase
+nmsprime-provbase.log = /etc/logrotate.d/nmsprime-provbase
 provbase.env        = /etc/nmsprime/env/provbase.env
 cron-restart-cwmp   = /etc/cron.d/restart-cwmp
 ignore-genieacs-cwmp.conf = /etc/rsyslog.d/ignore-genieacs-cwmp.conf
