DHCP: Block CPEs of modems without internet access

--- a/modules/ProvBase/Install/config.cfg
+++ b/modules/ProvBase/Install/config.cfg
@@ -19,6 +19,7 @@ configfiles = "module.json"
 
 [files]
 
+blocked.conf        = /etc/dhcp-nmsprime/blocked.conf
 cmts_gws.conf       = /etc/dhcp-nmsprime/cmts_gws.conf
 dhcpd.conf          = /etc/dhcp-nmsprime/dhcpd.conf
 endpoints-host.conf = /etc/dhcp-nmsprime/endpoints-host.conf
