--- a/modules/ProvBase/Install/files/global.conf
+++ b/modules/ProvBase/Install/files/global.conf
@@ -47,3 +47,10 @@ class "Client-Public" {
 	match pick-first-value (option agent.remote-id);
 	lease limit 4; # max 4 public cpe per cm
 }
+
+# All CPEs of modems without internet access - will be defined as subclass
+class "blocked" {
+    match if ((substring(option vendor-class-identifier,0,6) != "docsis") and (substring(option vendor-class-identifier,0,4) != "pktc"));
+    match pick-first-value (option agent.remote-id);
+    deny booting;
+}
