--- a/Install/files/nmsprime-admin.conf
+++ b/Install/files/nmsprime-admin.conf
@@ -22,4 +22,8 @@ Listen 8080
         SetHandler "proxy:fcgi://127.0.0.1:9000"
         SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
     </FilesMatch>
+
+    Redirect /genieacs /genieacs/
+    ProxyPass "/genieacs/" "http://127.0.0.1:3000/"
+    ProxyPassReverse "/genieacs/" "http://127.0.0.1:3000/"
 </VirtualHost>
