--- a/modules/ProvBase/Install/config.cfg
+++ b/modules/ProvBase/Install/config.cfg
@@ -58,4 +58,5 @@ gateways6.conf      = /etc/kea/gateways6.conf
 global6.conf        = /etc/kea/global6.conf
 hosts6.conf         = /etc/kea/hosts6.conf
 path-kea-dhcp6.conf = /usr/lib/systemd/system/kea-dhcp6.service.d/path-kea-dhcp6.conf
+nmsprime-acs.conf   = /etc/httpd/conf.d/nmsprime-acs.conf
 nmsprime-firmware.conf = /etc/httpd/conf.d/nmsprime-firmware.conf
