Fix bug in CarrierCode and EkpCode updater commands.
There has been problems with soft deleted entries when updating from CSV
file.

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,7 @@ phpunit/*.xml
 
 # modules status file
 modules_statuses.json
+
+# checksum files to detect changes in CSV files
+storage/app/config/provvoip/carrier_codes__sha1sum
+storage/app/config/provvoip/ekp_codes__sha1sum
