align firmware paths for tftp and http

--- a/modules/ProvBase/Install/files/nmsprime-firmware.conf
+++ b/modules/ProvBase/Install/files/nmsprime-firmware.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    Alias /firmware /tftpboot/fw
+    Alias /fw /tftpboot/fw
 
     <Directory /tftpboot/fw>
         Require all granted
