PreRelease Fix: Fix dependencies for rpm installation

--- a/modules/NmsMail/Install/config.cfg
+++ b/modules/NmsMail/Install/config.cfg
@@ -8,7 +8,7 @@ destination	= "/var/www/nmsprime/modules/NmsMail"
 
 license		= "GPLv3"
 
-depends		= "nmsprime-base"
+depends		= "nmsprime-base;nmsprime-provbase"
 
 options		= ""
 
