PreRelease Fix: Install dependencies pt. 2

--- a/modules/HfcSnmp/Install/config.cfg
+++ b/modules/HfcSnmp/Install/config.cfg
@@ -8,7 +8,7 @@ destination	= "/var/www/nmsprime/modules/HfcSnmp"
 
 license		= "GPLv3"
 
-depends		= "net-snmp-utils;net-snmp;net-snmp-devel;rh-php73-php-snmp;nmsprime-base"
+depends		= "net-snmp-utils;net-snmp;net-snmp-devel;rh-php73-php-snmp;nmsprime-base;nmsprime-hfcbase"
 
 options		= ""
 
