--- a/composer.json
+++ b/composer.json
@@ -1,64 +1,75 @@
 {
-  "name": "laravel/laravel",
-  "description": "The Laravel Framework.",
-  "keywords": ["framework", "laravel"],
-  "license": "MIT",
-  "type": "project",
-  "require": {
-    "laravel/framework": "6.*",
-    "soapbox/laravel-formatter": "2.x",
-    "laravelcollective/html": "6.*",
-    "digitick/sepa-xml": "1.*",
-    "globalcitizen/php-iban": "4.*",
-    "box/spout": "^3.0",
-    "madnest/madzipper": "1.0.*",
-    "yajra/laravel-datatables-oracle": "9.*",
-    "markrogoyski/ipv4-subnet-calculator": "3.*",
-    "nwidart/laravel-modules": "^6.0",
-    "doctrine/dbal": "^2.7",
-    "silber/bouncer": "v1.0.0-rc.9",
-    "kingsquare/php-mt940": "^1.5",
-    "fideloper/proxy": "^4.4",
-    "phpseclib/phpseclib": "~2.0",
-    "intervention/validation": "^2.6"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "~9.0",
-    "phpspec/phpspec": "~6.1",
-    "laravel/tinker": "^1.0",
-    "fzaninotto/faker": "~1.9.1",
-    "facade/ignition": "^1.4"
-  },
-  "autoload": {
-    "classmap": [
-      "database",
-      "database/migrations",
-      "database/seeds"
+    "name": "laravel/laravel",
+    "description": "The Laravel Framework.",
+    "keywords": [
+        "framework",
+        "laravel"
     ],
-    "psr-4": {
-      "App\\": "app/",
-      "Modules\\": "modules",
-      "Acme\\": "app/extensions/"
+    "license": "MIT",
+    "type": "project",
+    "require": {
+        "laravel/framework": "6.*",
+        "soapbox/laravel-formatter": "2.x",
+        "laravelcollective/html": "6.*",
+        "digitick/sepa-xml": "1.*",
+        "globalcitizen/php-iban": "4.*",
+        "box/spout": "^3.0",
+        "madnest/madzipper": "1.0.*",
+        "yajra/laravel-datatables-oracle": "9.*",
+        "markrogoyski/ipv4-subnet-calculator": "3.*",
+        "nwidart/laravel-modules": "^6.0",
+        "doctrine/dbal": "^2.7",
+        "silber/bouncer": "v1.0.0-rc.9",
+        "kingsquare/php-mt940": "^1.5",
+        "fideloper/proxy": "^4.4",
+        "phpseclib/phpseclib": "~2.0",
+        "intervention/validation": "^2.6"
     },
-    "files": ["app/helpers.php"]
-  },
-  "autoload-dev": {
-    "classmap": ["tests/TestCase.php", "tests/BaseLifecycleTest.php"]
-  },
-  "scripts": {
-    "post-install-cmd": ["php artisan clear-compiled"],
-    "post-update-cmd": ["php artisan clear-compiled"],
-    "post-create-project-cmd": [
-      "php -r \"copy('.env.example', '.env');\"",
-      "php artisan key:generate"
-    ],
-    "post-autoload-dump": [
-      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-      "@php artisan package:discover"
-    ]
-  },
-  "config": {
-    "preferred-install": "dist",
-    "optimize-autoloader": true
-  }
+    "require-dev": {
+        "phpunit/phpunit": "~9.0",
+        "phpspec/phpspec": "~6.1",
+        "laravel/tinker": "^1.0",
+        "fzaninotto/faker": "~1.9.1"
+    },
+    "autoload": {
+        "classmap": [
+            "database",
+            "database/migrations",
+            "database/seeds"
+        ],
+        "psr-4": {
+            "App\\": "app/",
+            "Modules\\": "modules",
+            "Acme\\": "app/extensions/"
+        },
+        "files": [
+            "app/helpers.php"
+        ]
+    },
+    "autoload-dev": {
+        "classmap": [
+            "tests/TestCase.php",
+            "tests/BaseLifecycleTest.php"
+        ]
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "php artisan clear-compiled"
+        ],
+        "post-update-cmd": [
+            "php artisan clear-compiled"
+        ],
+        "post-create-project-cmd": [
+            "php -r \"copy('.env.example', '.env');\"",
+            "php artisan key:generate"
+        ],
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
+        ]
+    },
+    "config": {
+        "preferred-install": "dist",
+        "optimize-autoloader": true
+    }
 }
