increase api requests/minute to 180

--- a/Install/files/global.env
+++ b/Install/files/global.env
@@ -34,3 +34,6 @@ GOOGLE_API_KEY=
 
 # mailaddress to use for OSM geocode API (see https://operations.osmfoundation.org/policies/nominatim)
 OSM_NOMINATIM_EMAIL=
+
+# default: allow 180 API requests per 1 minute
+#API_THROTTLE=180,1
