Use full path of php73 binary as it otherwise can not be guaranteed that nmsd is working

--- a/modules/ProvBase/Install/files/nmsprimed.service
+++ b/modules/ProvBase/Install/files/nmsprimed.service
@@ -7,7 +7,7 @@ After=time-sync.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/php -f /var/www/nmsprime/app/extensions/systemd/nmsd.php
+ExecStart=/opt/rh/rh-php73/root/usr/bin/php -f /var/www/nmsprime/app/extensions/systemd/nmsd.php
 
 [Install]
 WantedBy=multi-user.target
